--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "test:lint": "eslint --max-warnings=0 --ignore-path .gitignore  --ext .js,.ts,.tsx .",
     "test:format": "prettier 'src/*.(js|ts|tsx|css|scss)' --list-different",
     "test:app": "react-app-rewired test --env=jsdom --passWithNoTests",
-    "preinstall": "git submodule update --init --recursive"
+    "preinstall": "git submodule update --init --recursive; (cd src/excalidraw; patch -p1 < ../../excalidraw.patch)"
   },
   "eslintConfig": {
     "extends": "react-app"
