--- a/package.json
+++ b/package.json
@@ -4,23 +4,23 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
-    "@sentry/browser": "^5.15.5",
-    "@sentry/integrations": "^5.15.5",
-    "@testing-library/jest-dom": "^5.9.0",
-    "@testing-library/react": "^10.0.5",
-    "@types/dom-mediacapture-record": "^1.0.6",
-    "@types/jest": "^24.0.0",
+    "@sentry/browser": "^5.19.0",
+    "@sentry/integrations": "^5.19.0",
+    "@testing-library/jest-dom": "^5.11.0",
+    "@testing-library/react": "^10.4.3",
+    "@types/dom-mediacapture-record": "^1.0.7",
+    "@types/jest": "^26.0.3",
     "@types/lodash.throttle": "^4.1.6",
     "@types/nanoid": "^2.1.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.35",
+    "@types/node": "^14.0.14",
+    "@types/react": "^16.9.41",
     "@types/react-dom": "^16.9.8",
     "@types/socket.io-client": "^1.4.33",
-    "browser-nativefs": "^0.7.3",
+    "browser-nativefs": "^0.9.0",
     "customize-cra": "^1.0.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
-    "i18next-browser-languagedetector": "^4.2.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "i18next-browser-languagedetector": "^5.0.0",
     "jest-canvas-mock": "^2.2.0",
     "lodash.throttle": "^4.1.1",
     "nanoid": "^2.1.11",
@@ -35,8 +35,8 @@
     "react-scripts": "3.4.1",
     "roughjs": "^4.3.1",
     "socket.io-client": "^2.3.0",
-    "three": "^0.117.1",
-    "typescript": "^3.9.3",
+    "three": "^0.118.3",
+    "typescript": "^3.9.6",
     "worker-plugin": "^4.0.3"
   },
   "scripts": {
@@ -47,7 +47,7 @@
     "test:type": "tsc",
     "test:lint": "eslint --max-warnings=0 --ignore-path .gitignore  --ext .js,.ts,.tsx .",
     "test:format": "prettier 'src/*.(js|ts|tsx|css|scss)' --list-different",
-    "test:app": "react-scripts test --env=jsdom --passWithNoTests",
+    "test:app": "react-scripts test --env=jsdom --passWithNoTests --testPathIgnorePatterns=src/excalidraw",
     "preinstall": "git submodule update --init --recursive; (cd src/excalidraw; patch -N -p1 < ../../excalidraw.patch); true"
   },
   "eslintConfig": {
